[package]
name = "bong"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bong"
path = "src/main.rs"

[[bin]]
name = "bong-ui"
path = "src/bin/ui.rs"

[[bin]]
name = "bong-background"
path = "src/bin/background.rs"

[dependencies]
anyhow = "1.0.100"
gpui = "0.2.2"
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"
rust-embed = "8.9"
tray-icon = "0.20"
image = "0.25"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winres = "0.1"